--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- Add logo to the project -->
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/beer.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -32,7 +32,9 @@
     var title = "Beer Lovers";
     var description = "";
   %>
-    <title>Beer Lovers</title>
+    <!-- <title>Beer Lovers</title> -->
+    <title><%= title%></title>
+
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
